[package]
name = "actix-http-test"
version = "1.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix http test server"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-http-test/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = []

[lib]
name = "actix_http_test"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["open-ssl", "awc/openssl"]

[dependencies]
actix-service = "1.0.5"
actix-codec = "0.2.0"
actix-connect = "2.0.0-alpha.2"
actix-utils = "1.0.6"
actix-rt = "1.0.0"
actix-server = "1.0.2"
actix-testing = "1.0.0"
awc = { git = "https://github.com/SaulDoesCode/actix-web" }

base64 = "0.12.0"
bytes = "0.5.4"
futures = "0.3.4"
http = "0.2.1"
log = "0.4"
env_logger = "0.7.1"
net2 = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.6"
slab = "0.4"
serde_urlencoded = "0.6.1"
time = { version = "0.2.9", default-features = false, features = ["std"] }
open-ssl = { version="0.10", package="openssl", optional = true }

[dev-dependencies]
actix-web = { git = "https://github.com/SaulDoesCode/actix-web" }
actix-http = { git = "https://github.com/SaulDoesCode/actix-web" }
